--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,25 +10,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
-    <!--<TextView-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Enter Google Sheet ID"-->
-        <!--/>-->
-    <EditText
+
+
+    <AutoCompleteTextView
         android:id="@+id/txtGoogleId"
-        android:layout_width="fill_parent"
+        android:hint="GoogleSheetId"
+        android:maxLength="1024"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Google Sheet Id"
-        />
+        android:layout_marginBottom="5dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
 
-    <Button
-        android:id="@+id/btnDownload"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Download"
+        <Button
+            android:id="@+id/btnDownload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Download"
+            />
+        <Button
+            android:id="@+id/btnSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save"
 
-        />
+            />
+    </LinearLayout>
+
 
     <RelativeLayout
         android:id="@+id/FileSelectorLayout"
@@ -69,7 +80,7 @@
     <EditText
         android:id="@+id/txtMessage"
         android:layout_width="fill_parent"
-        android:layout_height="250px"
+        android:layout_height="300px"
         android:gravity="top"
 
         android:scrollbars="vertical" />
